<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.majordodo</groupId>
    <artifactId>majordodo-parent</artifactId>
    <version>0.19.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Majordodo</name>
    <url>http://majordodo.org</url>
    <description>A Distributed Resource Manager</description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>scm:git:https://github.com/diennea/majordodo.git</url>
        <developerConnection>scm:git:https://github.com/diennea/majordodo.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <developers>
        <developer>
            <id>eolivelli</id>
            <name>Enrico Olivelli</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>alessandro.luccaroni</id>
            <name>Alessandro Luccaroni</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>diana.clementi</id>
            <name>Diana clementi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>diego.salvi</id>
            <name>Diego Salvi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>matteo.casadei</id>
            <name>Matteo Casadei</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>nicolo.boschi</id>
            <name>Nicolò Boschi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>francesco.caliumi</id>
            <name>Francesco Caliumi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>mino181295</id>
            <name>Matteo Minardi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>dmercuriali</id>
            <name>Dennis Mercuriali</name>
            <organization>Diennea</organization>
        </developer>
    </developers>
    <issueManagement>
        <url>https://github.com/diennea/majordodo/issues</url>
    </issueManagement>
    <properties>
        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <libs.spotbugs>3.1.8</libs.spotbugs>
        <libs.jcipi-annotations>1.0</libs.jcipi-annotations>
        <libs.spotbugsannotations>3.1.8</libs.spotbugsannotations>
        <libs.spotbugsmaven>3.1.8</libs.spotbugsmaven>
    </properties>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs</artifactId>
            <version>${libs.spotbugs}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.jcip</groupId>
            <artifactId>jcip-annotations</artifactId>
            <version>${libs.jcipi-annotations}</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>${libs.spotbugsannotations}</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${libs.spotbugsmaven}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

        </plugins>

    </build>
    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>./majordodo-worker</module>
                <module>./majordodo-test-clients</module>
                <module>./majordodo-client</module>
                <module>./majordodo-net</module>
                <module>./majordodo-core</module>
                <module>./majordodo-services</module>
                <module>./majordodo-web-ui</module>
                <module>./majordodo-embedded</module>
                <module>./majordodo-site-skin</module>
                <module>./majordodo-website</module>
            </modules>
            <distributionManagement>
                <repository>
                    <!-- temporary with are hosted at Majordodo house -->
                    <id>dev.majordodo.org</id>
                    <name>Majordodo Public Repository</name>
                    <url>https://dev.majordodo.org/nexus/content/repositories/releases/</url>
                </repository>
                <snapshotRepository>
                    <id>dev.majordodo.org.snapshots</id>
                    <name>Majordodo Public Repository</name>
                    <url>https://dev.majordodo.org/nexus/content/repositories/snapshots/</url>
                </snapshotRepository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M3</version>
                        <configuration>
                            <forkCount>1</forkCount>
                            <reuseForks>false</reuseForks>
                            <forkedProcessTimeoutInSeconds>180</forkedProcessTimeoutInSeconds>
                            <trimStackTrace>false</trimStackTrace>
                            <argLine>--add-opens java.base/sun.security.x509=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>ossrh</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>./majordodo-worker</module>
                <module>./majordodo-test-clients</module>
                <module>./majordodo-client</module>
                <module>./majordodo-net</module>
                <module>./majordodo-core</module>
                <module>./majordodo-web-ui</module>
                <module>./majordodo-embedded</module>
            </modules>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M3</version>
                        <configuration>
                            <forkCount>1</forkCount>
                            <reuseForks>false</reuseForks>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.8</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>website</id>
            <modules>
                <module>./majordodo-site-skin</module>
                <module>./majordodo-website</module>
            </modules>
        </profile>
    </profiles>
</project>
